--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -378,7 +378,8 @@
                     android:layout_height="wrap_content"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="25dp"
-                    app:cardBackgroundColor="?attr/colorPrimary">
+                    app:cardBackgroundColor="?attr/colorPrimary"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
