--- a/app/src/main/res/layout/custom_gridview_symbol.xml
+++ b/app/src/main/res/layout/custom_gridview_symbol.xml
@@ -30,7 +30,7 @@
         android:layout_gravity="center"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:visibility="gone"
+        android:visibility="visible"
         app:cardElevation="0dp">
 
         <LinearLayout
@@ -46,19 +46,6 @@
                 android:layout_gravity="center"
                 android:orientation="vertical">
 
-                <!--<ImageView
-                    android:id="@+id/BGIconIV"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/bg_circle_white_dark" />-->
-
-                <!--<ImageView
-                    android:id="@+id/LockIV"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/ic_lock_yellow"/>-->
-
                 <RelativeLayout
                     android:id="@+id/LockRL"
                     android:layout_width="wrap_content"
@@ -66,19 +53,13 @@
                     android:layout_gravity="center"
                     android:orientation="vertical">
 
-                    <!--<ImageView
-                        android:id="@+id/BGIcoIV"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/bg_circle_white_dark" />-->
 
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_centerInParent="true"
-                        android:tag="lock"
-                        android:background="@drawable/ic_star"/>
+                        android:background="@drawable/ic_king"
+                        android:tag="lock" />
 
                 </RelativeLayout>
 
