--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -15,6 +15,8 @@
             android:padding="15dp"
             android:orientation="vertical" >
 
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -109,46 +111,145 @@
 
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.gms.ads.nativead.NativeAdView
+                android:id="@+id/nativeAdView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="0dp"
                 app:cardCornerRadius="10dp"
                 android:layout_margin="5dp"
-                app:cardBackgroundColor="?attr/colorPrimary"
+                android:visibility="gone"
                 >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:background="@drawable/bg_radius_10_primary"
                     >
 
-                    <RelativeLayout
+                    <com.google.android.gms.ads.nativead.MediaView
+                        android:id="@+id/mediaView"
                         android:layout_width="match_parent"
-                        android:layout_height="160dp"
+                        android:layout_height="70dp"
+
+                        />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         >
 
-                        <TextView
+                        <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="AD"
-                            android:textStyle="bold"
-                            android:textColor="@color/colorWhite"
-                            android:background="@drawable/bg_radius_bottom_right10_white_dark"
-                            android:paddingStart="5dp"
-                            android:paddingEnd="5dp"
-                            />
+                            android:elevation="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_gravity="center"
+                            app:cardBackgroundColor="?attr/colorPrimary"
+                            >
+
+                            <ImageView
+                                android:id="@+id/iconView"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <LinearLayout
+                            android:id="@+id/headline"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:layout_marginEnd="10dp"
+                            >
+
+                            <TextView
+                                android:id="@+id/primaryView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="head"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="20dp"
+                                android:maxLines="1"
+                                />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center"
+                                >
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Ad"
+                                    android:textColor="@color/colorWhite"
+                                    android:background="@drawable/background_with_ad_text"
+                                    android:layout_marginRight="5dp"
+                                    android:paddingRight="3dp"
+                                    android:paddingLeft="3dp"
+                                    android:paddingTop="2dp"
+                                    android:paddingBottom="2dp"
+                                    />
+
+                                <TextView
+                                    android:id="@+id/secondaryView"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="secondaryView"
+                                    android:maxLines="1"
+                                    />
+
+                                <TextView
+                                    android:id="@+id/tertiaryView"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="tertiaryView"
+                                    android:maxLines="1"
+                                    android:visibility="gone"
+                                    />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bg_radius_10_accent"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="10dp"
+                            >
+
+                            <TextView
+                                android:id="@+id/callToActionView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="?attr/selectableItemBackground"
+                                android:gravity="center"
+                                android:padding="10dp"
+                                android:text="ACTION"
+                                android:textColor="@color/colorWhite"
+                                android:textStyle="bold" />
+
+                        </RelativeLayout>
 
 
-                    </RelativeLayout>
+                    </LinearLayout>
+
 
 
                 </LinearLayout>
 
 
-            </androidx.cardview.widget.CardView>
-
+            </com.google.android.gms.ads.nativead.NativeAdView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
