--- a/app/src/main/res/layout/activity_check_permission.xml
+++ b/app/src/main/res/layout/activity_check_permission.xml
@@ -36,7 +36,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Task To-Do List"
+            android:text="@string/app_name"
             android:textSize="30dp"
             android:textStyle="bold"
             />
