--- a/app/src/main/res/layout/activity_upgrade_premium.xml
+++ b/app/src/main/res/layout/activity_upgrade_premium.xml
@@ -89,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:visibility="invisible"
                 android:orientation="vertical">
 
                 <TextView
@@ -150,6 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:visibility="invisible"
                 android:orientation="vertical">
 
                 <TextView
@@ -211,6 +213,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:visibility="invisible"
                 android:orientation="vertical">
 
                 <TextView
