--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="15dp"
         android:layout_marginTop="20dp"
         >
 
@@ -19,42 +18,53 @@
             android:layout_height="wrap_content"
             >
 
-            <LinearLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true"
+                app:cardPreventCornerOverlap="true"
                 >
-
-                <RelativeLayout
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/bg_circle_primary"
-                    >
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerInParent="true"
-                        android:layout_marginStart="2dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginBottom="2dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_user_regular"
-                        app:tint="@color/colorBlack" />
-
-                </RelativeLayout>
-
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/click_for_login_google"
-                    android:layout_gravity="center"
+                    android:orientation="horizontal"
                     android:background="?attr/selectableItemBackground"
-                    />
+                    android:padding="15dp"
+                    >
 
-            </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/bg_circle_primary"
+                        >
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerInParent="true"
+                            android:layout_marginStart="2dp"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginEnd="2dp"
+                            android:layout_marginBottom="2dp"
+                            android:padding="5dp"
+                            android:src="@drawable/ic_user_regular"
+                            app:tint="@color/colorBlack" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/click_for_login_google"
+                        android:layout_gravity="center"
+                        />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
 
@@ -62,6 +72,7 @@
             android:id="@+id/outRL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             >
 
             <LinearLayout
@@ -139,7 +150,7 @@
         android:gravity="center"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         >
 
         <ImageView
