--- a/app/src/main/res/layout/activity_synchronizetion.xml
+++ b/app/src/main/res/layout/activity_synchronizetion.xml
@@ -220,9 +220,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="เปิดการสำรองข้อมูลอัตโนมัติ เพื่อหลีกเลี่ยงการลืมซิงค์ข้อมูลด้วยตนเอง"
+                    android:text="@string/It_is_recommended_to_turn_on_automatic_backup"
                     android:textSize="12dp"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     />
 
             </LinearLayout>
