--- a/app/src/main/res/layout/listview_task.xml
+++ b/app/src/main/res/layout/listview_task.xml
@@ -8,138 +8,160 @@
     app:cardCornerRadius="10dp"
     android:layout_margin="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/colorWhiteDark"
+    app:cardBackgroundColor="?attr/colorPrimary"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
         >
-
-        <RelativeLayout
-            android:id="@+id/itemStateRL"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_marginStart="10dp"
-            >
-
-            <ImageView
-                android:id="@+id/stateIV"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="5dp"
-                android:src="@drawable/ic_round"
-                app:tint="@color/colorWhiteDarkDark"
-                />
-
-        </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/iconCateIV"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="10dp"
-            />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginStart="10dp"
+            android:background="?attr/selectableItemBackground"
             >
 
-            <TextView
-                android:id="@+id/nameTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="nameTV"
-                android:textColor="@color/colorBlack"
+            <RelativeLayout
+                android:id="@+id/itemStateRL"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_marginStart="10dp"
+                >
+
+                <ImageView
+                    android:id="@+id/stateIV"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_round"
+                    app:tint="@color/colorWhiteDarkDark" />
+
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/iconCateIV"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="10dp"
                 />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_height="65dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginStart="10dp"
                 >
+
                 <TextView
-                    android:id="@+id/textDueDateTV"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/nameTV"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="07/03"
-                    android:textSize="12dp"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="5dp"
+                    android:text="nameTV"
+                    android:textColor="@color/colorBlack"
                     />
 
-                <ImageView
-                    android:id="@+id/iconSubtaskIV"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_subtask_filled"
-                    android:layout_marginEnd="5dp"
-                    app:tint="@color/colorWhiteDarkDark"
-                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+                        android:id="@+id/textDueDateTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="07/03"
+                        android:textSize="12dp"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="5dp"
+                        />
 
-                <ImageView
-                    android:id="@+id/iconAttackTaskIV"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_attach"
-                    android:layout_marginEnd="5dp"
-                    app:tint="@color/colorWhiteDarkDark"
-                    />
+                    <ImageView
+                        android:id="@+id/iconSubtaskIV"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_subtask_filled"
+                        android:layout_marginEnd="5dp"
+                        app:tint="@color/colorWhiteDarkDark"
+                        />
 
-                <ImageView
-                    android:id="@+id/iconReminderIV"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_notification"
-                    android:layout_marginEnd="5dp"
-                    app:tint="@color/colorWhiteDarkDark"
-                    />
+                    <ImageView
+                        android:id="@+id/iconAttackTaskIV"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_attach"
+                        android:layout_marginEnd="5dp"
+                        app:tint="@color/colorWhiteDarkDark"
+                        />
 
-                <ImageView
-                    android:id="@+id/iconRepeatIV"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_repeat"
-                    android:layout_marginEnd="5dp"
-                    app:tint="@color/colorWhiteDarkDark"
-                    />
+                    <ImageView
+                        android:id="@+id/iconReminderIV"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_notification"
+                        android:layout_marginEnd="5dp"
+                        app:tint="@color/colorWhiteDarkDark"
+                        />
+
+                    <ImageView
+                        android:id="@+id/iconRepeatIV"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_repeat"
+                        android:layout_marginEnd="5dp"
+                        app:tint="@color/colorWhiteDarkDark"
+                        />
+
+
+                </LinearLayout>
 
 
             </LinearLayout>
 
+            <RelativeLayout
+                android:id="@+id/itemFavoriteRL"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="10dp"
+                >
+                <ImageView
+                    android:id="@+id/favoriteIV"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_star"
+                    app:tint="@color/colorWhiteDarkDark"
+                    />
+
+            </RelativeLayout>
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/itemFavoriteRL"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:padding="10dp"
+        <LinearLayout
+            android:id="@+id/subtaskLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
             >
-            <ImageView
-                android:id="@+id/favoriteIV"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="5dp"
-                android:src="@drawable/ic_star"
-                app:tint="@color/colorWhiteDarkDark"
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/subtaskRCV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 />
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
