--- a/app/src/main/res/layout/listview_task_subtask.xml
+++ b/app/src/main/res/layout/listview_task_subtask.xml
@@ -9,46 +9,30 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingLeft="15dp"
+        android:paddingLeft="20dp"
         android:paddingTop="5dp"
-        android:paddingRight="15dp"
+        android:paddingRight="20dp"
         android:paddingBottom="5dp">
 
         <ImageView
             android:id="@+id/stateIV"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:padding="5dp"
             android:src="@drawable/ic_round"
             app:tint="@color/colorWhiteDarkDark" />
 
-        <EditText
-            android:id="@+id/todoEDT"
+        <TextView
+            android:id="@+id/nameTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorWhite"
             android:hint="@string/enter_subtasks"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:text="Subtask" />
 
-        <ImageView
-            android:id="@+id/itemMoveIV"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="10dp"
-            android:padding="5dp"
-            android:src="@drawable/ic_menu"
-            app:tint="@color/colorBlackAlpha" />
-
-
-        <ImageView
-            android:id="@+id/cancelIV"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="10dp"
-            android:padding="5dp"
-            android:src="@drawable/ic_cancel_filled"
-            app:tint="@color/colorBlackAlpha" />
 
     </LinearLayout>
 
