--- a/app/src/main/res/layout/activity_input_tasks.xml
+++ b/app/src/main/res/layout/activity_input_tasks.xml
@@ -340,38 +340,114 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:gravity="center"
-                            android:padding="15dp"
                             android:background="?attr/selectableItemBackground"
-                            >
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:padding="15dp">
 
                             <ImageView
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
-                                android:src="@drawable/ic_repeat"
-                                android:layout_marginRight="15dp"/>
+                                android:layout_marginRight="15dp"
+                                android:src="@drawable/ic_repeat" />
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:text="@string/repeat_every"
-                                android:textColor="@color/colorBlack"
-                                />
+                                android:textColor="@color/colorBlack" />
 
                             <TextView
                                 android:id="@+id/stateRepeatTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/not_repeat"
-                                android:paddingRight="10dp"
+                                android:background="@drawable/bg_radius_10_primary"
                                 android:paddingLeft="10dp"
                                 android:paddingTop="5dp"
+                                android:paddingRight="10dp"
                                 android:paddingBottom="5dp"
-                                android:background="@drawable/bg_radius_10_primary"
-                                android:textColor="@color/colorBlack"
-                                />
+                                android:text="@string/not_repeat"
+                                android:textColor="@color/colorBlack" />
+
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorWhiteDark"
+                        />
+
+                    <RelativeLayout
+                        android:id="@+id/settingLocationRL"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            >
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="?attr/selectableItemBackground"
+                                android:gravity="center"
+                                android:orientation="horizontal"
+                                android:padding="15dp">
+
+                                <ImageView
+                                    android:layout_width="25dp"
+                                    android:layout_height="25dp"
+                                    android:layout_marginRight="15dp"
+                                    android:src="@drawable/ic_location_60" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="@string/Location"
+                                    android:textColor="@color/colorBlack" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingLeft="10dp"
+                                    android:paddingTop="5dp"
+                                    android:paddingRight="10dp"
+                                    android:paddingBottom="5dp"
+                                    android:text="@string/add"
+                                    android:textColor="@color/colorBlack"
+                                    android:visibility="visible" />
+
+                            </LinearLayout>
+
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/mapViewCV"
+                                android:layout_width="match_parent"
+                                android:layout_height="200dp"
+                                app:cardCornerRadius="10dp"
+                                app:cardUseCompatPadding="true"
+                                app:cardPreventCornerOverlap="true"
+                                app:cardElevation="0dp"
+                                >
+                                <FrameLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    >
+                                    <fragment
+                                        android:id="@+id/map"
+                                        android:name="com.google.android.gms.maps.SupportMapFragment"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        tools:context=".MapsActivity"
+                                        />
+                                </FrameLayout>
+                            </androidx.cardview.widget.CardView>
+
 
                         </LinearLayout>
 
@@ -389,38 +465,37 @@
                         android:layout_height="wrap_content"
                         android:clickable="true"
                         >
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:gravity="center"
-                            android:padding="15dp"
                             android:background="?attr/selectableItemBackground"
-                            >
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:padding="15dp">
+
                             <ImageView
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
-                                android:src="@drawable/ic_attach"
-                                android:layout_marginRight="15dp"/>
+                                android:layout_marginRight="15dp"
+                                android:src="@drawable/ic_attach" />
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:text="@string/attachment"
-                                android:textColor="@color/colorBlack"
-                                />
+                                android:textColor="@color/colorBlack" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/add"
-                                android:paddingRight="10dp"
                                 android:paddingLeft="10dp"
                                 android:paddingTop="5dp"
+                                android:paddingRight="10dp"
                                 android:paddingBottom="5dp"
-                                android:textColor="@color/colorBlack"
-                                />
+                                android:text="@string/add"
+                                android:textColor="@color/colorBlack" />
 
                         </LinearLayout>
 
@@ -430,12 +505,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         >
+
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/imageRCV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:nestedScrollingEnabled="false"
-                            />
+                            android:nestedScrollingEnabled="false" />
                     </RelativeLayout>
 
                     <RelativeLayout
