--- a/app/src/main/res/menu/popup_menu_category.xml
+++ b/app/src/main/res/menu/popup_menu_category.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/item1"
-        android:title="@string/edit"/>
+        android:title="@string/Edit"/>
 
     <item android:id="@+id/item2"
         android:title="@string/hide"/>
