-edit design init language

--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -74,11 +74,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     >
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/dataRCV"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
+
                 </RelativeLayout>
 
             </LinearLayout>
