--- a/app/src/main/res/layout/listview_task_cal.xml
+++ b/app/src/main/res/layout/listview_task_cal.xml
@@ -11,7 +11,7 @@
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="?attr/colorPrimary"
+    app:cardBackgroundColor="@color/colorWhiteDark"
     >
 
     <LinearLayout
