--- a/app/src/main/res/layout/listview_task_history.xml
+++ b/app/src/main/res/layout/listview_task_history.xml
@@ -29,7 +29,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            app:cardBackgroundColor="?attr/colorPrimary"
+            app:cardBackgroundColor="@color/colorWhiteDark"
             >
 
             <LinearLayout
